# spanish-public-info-radar-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml
src/public_radar/: __init__.py  __main__.py
src/public_radar/common/: __init__.py  dates.py  http.py  logging.py
src/public_radar/mcp/: __init__.py  logging.py  server.py
src/public_radar/prompts/: __init__.py  bdns.py  boe.py  combined.py  datos_gob.py  ine.py
src/public_radar/sources/: __init__.py  bdns.py  boe.py  datos_gob.py  ine.py
tests/: __init__.py  conftest.py
tests/fixtures/: bdns_concesiones_sample.json  bdns_convocatorias_sample.json  boe_sumario_sample.json  borme_empty_day.json  borme_sumario_parser_sample.json  borme_sumario_sample.json  datos_gob_datasets_sample.json  datos_gob_publishers.json  datos_gob_themes.json
tests/integration/: __init__.py  conftest.py  test_bdns_api.py  test_boe_api.py  test_datos_gob_api.py  test_ine_api.py
tests/unit/: __init__.py  test_bdns_parser.py  test_boe_parser.py  test_dates.py  test_datos_gob_parser.py  test_http.py  test_mcp_logging.py  test_mcp_prompts.py  test_mcp_tools.py
